# hs-path2dirname

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  hs-path2dirname.cabal  opt.sh
app/: Main.hs
src/: PathToDirname.hs
