cabal-version:      3.14
name:               hs-path2dirname
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PathToDirname
    build-depends:
        base >= 4.14 && < 5,
        filepath >= 1.5.0 && < 1.6.0
    hs-source-dirs:   src
    default-language: GHC2021

executable hs-path2dirname
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 5,
        hs-path2dirname
    hs-source-dirs:   app
    default-language: GHC2021
